--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "lint-staged": "^15.2.10",
     "prettier": "^3.3.3",
     "turbo": "^2.1.2",
-    "typescript": "^5.6.2",
-    "simple-event-bus": "workspace:*"
+    "typescript": "^5.6.2"
   },
   "lint-staged": {
     "*.ts": "turbo lint"
