--- a/packages/simple-event-bus/package.json
+++ b/packages/simple-event-bus/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "simple-event-bus",
+  "name": "@sylvmty/simple-event-bus",
   "type": "module",
   "version": "1.0.0",
   "description": "A simple, no-dependency, synchronous event bus written in TypeScript",
@@ -34,6 +34,7 @@
     "eslint": "^9.11.0",
     "typescript": "^5.6.2",
     "vite": "^5.3.2",
+    "vite-plugin-dts": "^4.2.2",
     "vitest": "^1.6.0"
   },
   "lint-staged": {
