--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,9 +20,10 @@ jobs:
       - name: Lint
         run: |
           pnpm run lint
+      - name: Build
+        run: |
+          pnpm run build --filter @sylvmty/simple-event-bus
+          pnpm run build --filter @sylvmty/simple-event-bus-nestjs
       - name: Tests
         run: |
           pnpm run test
-      - name: Build
-        run: |
-          pnpm run build
