--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
+    "@sylvmty/simple-event-bus": "workspace:*",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.10",
     "prettier": "^3.3.3",
@@ -35,5 +36,10 @@
   "lint-staged": {
     "*.ts": "turbo lint"
   },
-  "packageManager": "pnpm@9.11.0"
+  "packageManager": "pnpm@9.11.0",
+  "pnpm": {
+    "overrides": {
+      "@sylvmty/simple-event-bus": "workspace:*"
+    }
+  }
 }
