--- a/packages/simple-event-bus/package.json
+++ b/packages/simple-event-bus/package.json
@@ -23,8 +23,7 @@
     "lint": "eslint . --fix",
     "test": "vitest --run",
     "test:watch": "vitest",
-    "test:coverage": "vitest --coverage",
-    "prepare": "husky install"
+    "test:coverage": "vitest --coverage"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^3.7.1",
