--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,10 +20,16 @@ jobs:
       - name: Lint
         run: |
           pnpm run lint
+      - name: Format
+        run: |
+          pnpm run format
       - name: Build
         run: |
           pnpm run build --filter @sylvmty/simple-event-bus
           pnpm run build --filter @sylvmty/simple-event-bus-nestjs
+      - name: TS Check
+        run: |
+          pnpm run tscheck
       - name: Tests
         run: |
           pnpm run test
