--- a/packages/simple-event-bus-nestjs/package.json
+++ b/packages/simple-event-bus-nestjs/package.json
@@ -6,10 +6,14 @@
   "license": "MIT",
   "scripts": {
     "build": "nest build",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "lint": " biome lint ./src ./libs",
+    "lint:fix": " biome lint ./src ./libs --write",
+    "format": "biome format ./src ./libs",
+    "format:fix": "biome format ./src ./libs --write",
+    "tscheck": "tsc --noEmit"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
@@ -26,11 +30,6 @@
     "@nestjs/testing": "^10.0.0",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
-    "@typescript-eslint/eslint-plugin": "^8.0.0",
-    "@typescript-eslint/parser": "^8.0.0",
-    "eslint": "^8.42.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
     "source-map-support": "^0.5.21",
     "ts-jest": "^29.1.0",
