--- a/packages/simple-event-bus/package.json
+++ b/packages/simple-event-bus/package.json
@@ -20,17 +20,18 @@
   "scripts": {
     "dev": "vite build --watch",
     "build": "vite build",
-    "lint": "eslint . --fix",
     "test": "vitest --run",
     "test:watch": "vitest",
-    "test:coverage": "vitest --coverage"
+    "test:coverage": "vitest --coverage",
+    "lint": " biome lint ./src",
+    "lint:fix": " biome lint ./src --write",
+    "format": "biome format ./src",
+    "format:fix": "biome format ./src --write",
+    "tscheck": "tsc --noEmit"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^3.7.1",
     "@types/node": "^20.14.9",
-    "@typescript-eslint/eslint-plugin": "^8.6.0",
     "@vitest/coverage-v8": "^1.6.0",
-    "eslint": "^9.11.0",
     "typescript": "^5.6.2",
     "vite": "^5.3.2",
     "vite-plugin-dts": "^4.2.2",
