--- a/package.json
+++ b/package.json
@@ -17,22 +17,21 @@
   ],
   "scripts": {
     "build": "turbo build",
-    "lint": "turbo lint",
-    "lint:fix": "turbo lint:fix",
-    "format": "turbo format",
-    "format:fix": "turbo format:fix",
+    "lint": " biome lint ./packages/simple-event-bus/src ./packages/simple-event-bus-nestjs/src ./packages/simple-event-bus-nestjs/libs",
+    "lint:fix": " biome lint ./packages/simple-event-bus/src ./packages/simple-event-bus-nestjs/src ./packages/simple-event-bus-nestjs/libs --write",
+    "format": "biome format ./packages/simple-event-bus/src ./packages/simple-event-bus-nestjs/src ./packages/simple-event-bus-nestjs/libs",
+    "format:fix": "biome format ./packages/simple-event-bus/src ./packages/simple-event-bus-nestjs/src ./packages/simple-event-bus-nestjs/libs --write",
     "tscheck": "turbo tscheck",
     "test": "turbo test",
     "test:watch": "turbo test:watch",
-    "test:coverage": "turbo test:coverage",
-    "prepare": "husky install"
+    "test:coverage": "turbo test:coverage"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.2",
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
     "@sylvmty/simple-event-bus": "workspace:*",
-    "husky": "^9.0.11",
+    "lefthook": "^1.7.17",
     "lint-staged": "^15.2.10",
     "prettier": "^3.3.3",
     "turbo": "^2.1.2",
